# spiroid

./: Cargo.toml
docs/: README.md
examples/: all_effects.conf  all_effects_expected.json  magnetic.conf  magnetic_expected.json  magnetic_tides.conf  magnetic_tides_expected.json  mesa.conf  mesa_expected.json  no_effects_starevol.conf  no_effects_starevol_expected.json  planet_kaula_solid_tides.conf  planet_kaula_solid_tides_1d_interpolation.conf  planet_kaula_solid_tides_1d_interpolation_expected.json  planet_kaula_solid_tides_2d_interpolation.conf  planet_kaula_solid_tides_2d_interpolation_expected.json  star_equilibrium_tides.conf  star_equilibrium_tides_expected.json  star_zahn_tides_mesa.conf  star_zahn_tides_mesa_expected.json
examples/data/planet/tides/kaula/: 2d_interpolator.json  (+1 more)
examples/data/star/evolution/: mesa_10.csv  mesa_11.csv  mesa_12.csv  mesa_13.csv  mesa_14.csv  mesa_15.csv  mesa_16.csv  mesa_17.csv  mesa_18.csv  mesa_19.csv  mesa_20.csv  mesa_21.csv  mesa_22.csv  mesa_23.csv  mesa_24.csv  mesa_25.csv  mesa_26.csv
scripts/: convert_mesa_to_csv.py  plotter.py  setup.py  units.py
scripts/spiroid/: config.py  configmaker.py
src/: lib.rs  main.rs  tests.rs  universe.rs
src/universe/: particles.rs  physics.rs
src/universe/effects/: magnetism.rs  tides.rs
src/universe/effects/magnetism/: tests.rs
src/universe/effects/tides/: constant_time_lag.rs  kaula.rs
src/universe/particles/: planet.rs  star.rs
src/universe/particles/planet/: tests.rs
src/universe/particles/star/: star_csv.rs  tests.rs
src/universe/physics/: tests.rs
(+5 files in other folders)
